syntax = "proto3";
package DataNodeProto;

service DataNodeProto {
    rpc SendHeartBeat (HeartBeatRequest) returns (HeartBeatResponse) {}
	rpc SendBlockReport (BlockReportRequest) returns (StatusResponse) {}
	rpc WriteDataBlock (stream BlockData) returns (StatusResponse) {}
}

message HeartBeatRequest {
	DataNodeInfo nodeInfo = 1;
}

message HeartBeatResponse {
	BlockCommand commands = 1; // Returned commands can be null
}

message BlockReportRequest {
	DataNode dataNode = 1;
	BlockList blockList = 2;
}

message DataBlock {
	UUID blockId = 1;
	bytes data = 2;
	repeated DataNode dataNodes = 3; // DataNodes to forward data to
}

message DataNode {
	string ipAddress = 1;
}

message DataNodeInfo {
	DataNode dataNode = 1;
	int64 diskSpace = 2;
}

message BlockCommand {
  enum Action {  
    TRANSFER = 0;   // Transfer blocks to another datanode
    DELETE = 1; // DELETE blocks
  }

  Action action = 1;
  BlockList blockList = 2; // For Delete
  repeated DataBlock dataBlock = 3; // For Transfer
}

message BlockList {
	repeated UUID blockId = 1; // Blocks stored on datanode
}

message BlockData {
	bytes data = 1;
}

message StatusResponse {
	enum StatusType {
		Success = 0;
		Fail = 1;
	}
	StatusType type = 1;
}

message UUID {
	string value = 1;
}